feat: update item module for booking integration - Update Item DTOs with booking dates fields - Enhance Item entity with proper relationships - Implement ItemMapper for DTO conversion - Update ItemRepository with booking queries - Complete ItemService with booking date logic